--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #Debug
 debug=true
 
+# Server compression
+server.compression.enabled=true
+server.compression.min-response-size=2048
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
 # Database connection
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/myappdb
@@ -12,3 +17,4 @@ spring.jooq.sql-dialect=POSTGRES
 
 # Flyway
 flyway.locations=classpath:db/migration
+
